# deconv_gui

./: .gitignore  LICENSE  README.md  deconvolution_gui.py  pyproject.toml  requirements.txt
julia/: Manifest.toml  Project.toml  deconv_cli.jl
scripts/: run_pc.sh  run_rpi.sh  setup_pc.sh  setup_rpi.sh
